# libnd4j-accelerate

./: CMakeLists.txt  README.md
blas/: CMakeLists.txt  NativeOps.h
blas/cpu/: GraphExecutioner.cpp  NativeOps.cpp
include/layers/generic/: BaseLayer.h
include/ops/: ops.h
tests/layers_tests/: CMakeLists.txt  GraphTests.cpp
